#142: renamed to devonfw-ide

--- a/devon/conf/devon.properties
+++ b/devon/conf/devon.properties
@@ -1,9 +1,10 @@
 #********************************************************************************
 # This file contains user sepcific environment variables
-# You may reconfigure some variables to tweak devon-ide to your personal needs
+# You may reconfigure some variables to tweak devonfw-ide to your personal needs
 # However, you do so at your own risk!!!
 # Only change variables if you know exactly what you are doing!!!
-# For details see https://github.com/devonfw/ide/wiki/configuration
+# For details see:
+# https://github.com/devonfw/ide/blob/master/documentation/configuration.asciidoc#configuration
 #********************************************************************************
 
 # Uncomment the following line to use your shared maven repository
