Omit project. prefix from settings

--- a/projects/devon4j.properties
+++ b/projects/devon4j.properties
@@ -1,6 +1,6 @@
-project.path=devon4j
-project.workingsets=Devon,All
-project.workspace=main
-project.git.url=http://github.com/devonfw/devon4j
-project.git.branch=develop
-project.eclipse=import
+path=devon4j
+workingsets=Devon,All
+workspace=main
+git.url=http://github.com/devonfw/devon4j
+git.branch=develop
+eclipse=import
