--- a/projects/mts.properties
+++ b/projects/mts.properties
@@ -1,5 +1,5 @@
-project.path=mts
-project.workingsets=my-thai-star
-project.git.url=http://github.com/devonfw/my-thai-star
-project.git.branch=develop
-project.eclipse=import
+path=mts
+workingsets=my-thai-star
+git.url=http://github.com/devonfw/my-thai-star
+git.branch=develop
+eclipse=import
