--- a/projects/mts.properties
+++ b/projects/mts.properties
@@ -1,5 +1,5 @@
 path=mts
 workingsets=my-thai-star
-git.url=http://github.com/devonfw/my-thai-star
+git.url=https://github.com/devonfw/my-thai-star.git
 git.branch=develop
 eclipse=import
