--- a/projects/devon4j.properties
+++ b/projects/devon4j.properties
@@ -1,6 +1,6 @@
 path=devon4j
 workingsets=Devon,All
 workspace=main
-git.url=http://github.com/devonfw/devon4j
+git.url=https://github.com/devonfw/devon4j.git
 git.branch=develop
 eclipse=import
