--- a/projects/devon4j.properties
+++ b/projects/devon4j.properties
@@ -3,4 +3,5 @@ workingsets=Devon,All
 workspace=main
 git.url=https://github.com/devonfw/devon4j.git
 git.branch=develop
+build=true
 eclipse=import
