--- a/projects/mts.properties
+++ b/projects/mts.properties
@@ -2,4 +2,5 @@ path=mts
 workingsets=my-thai-star
 git.url=https://github.com/devonfw/my-thai-star.git
 git.branch=develop
+build=true
 eclipse=import
