--- a/projects/mts.properties
+++ b/projects/mts.properties
@@ -2,5 +2,5 @@ path=mts
 workingsets=my-thai-star
 git.url=https://github.com/devonfw/my-thai-star.git
 git.branch=develop
-build=true
+build=./java/mtsj
 eclipse=import
