--- a/eclipse/plugins/checkstyle.properties
+++ b/eclipse/plugins/checkstyle.properties
@@ -1,4 +1,4 @@
-plugin_url=http://eclipse-cs.sf.net/update/
+plugin_url=https://checkstyle.org/eclipse-cs/update/
 plugin_id=net.sf.eclipsecs.feature.group
 plugin_active=true
 
