--- a/eclipse/plugins/github.properties
+++ b/eclipse/plugins/github.properties
@@ -1,4 +1,4 @@
-plugin_url=http://download.eclipse.org/egit/github/updates/
+plugin_url=https://download.eclipse.org/egit/github/updates/
 plugin_id=org.eclipse.mylyn.github.feature.feature.group
 plugin_active=false
 
