Fix typo in comment (#5)

--- a/devon.properties
+++ b/devon.properties
@@ -1,5 +1,5 @@
 #********************************************************************************
-# This file contains project sepcific environment variables
+# This file contains project specific environment variables
 # For details see https://github.com/devonfw/ide/wiki/configuration
 #********************************************************************************
 
