--- a/projects/mts.properties
+++ b/projects/mts.properties
@@ -3,4 +3,5 @@ workingsets=my-thai-star
 git.url=https://github.com/devonfw/my-thai-star.git
 git.branch=develop
 build.path=./java/mtsj
+build.command=build -DskipTests=true -Darchetype.test.skip=true clean install
 eclipse=import
