--- a/projects/devon4j.properties
+++ b/projects/devon4j.properties
@@ -5,3 +5,4 @@ git.url=https://github.com/devonfw/devon4j.git
 git.branch=develop
 build.command=build -DskipTests=true -Darchetype.test.skip=true clean install
 eclipse=import
+active=false
