#418: disable project by default

--- a/projects/mts.properties
+++ b/projects/mts.properties
@@ -5,3 +5,4 @@ git.branch=develop
 build.path=./java/mtsj
 build.command=build -DskipTests=true -Darchetype.test.skip=true clean install
 eclipse=import
+active=false
