--- a/eclipse/plugins/anyedit.properties
+++ b/eclipse/plugins/anyedit.properties
@@ -1,4 +1,4 @@
-plugin_url=http://andrei.gmxhome.de/eclipse/
+plugin_url=https://raw.githubusercontent.com/iloveeclipse/plugins/latest/
 plugin_id=AnyEditTools.feature.group
 plugin_active=true
 
