--- a/projects/cobigen.properties
+++ b/projects/cobigen.properties
@@ -1,7 +1,7 @@
 path=cobigen
 workingsets=cobigen
 git.url=https://github.com/devonfw/cobigen.git
-git.branch=develop
+git.branch=master
 build.command=build -DskipTests=true -Darchetype.test.skip=true clean install
 eclipse=import
 active=false
