Update swtbot.properties (#18)
reduce the plugins to the needed ones and update the plugin_ids, since some of them weren't available anymore.

--- a/eclipse/plugins/swtbot.properties
+++ b/eclipse/plugins/swtbot.properties
@@ -1,3 +1,3 @@
 plugin_url=http://download.eclipse.org/technology/swtbot/releases/latest/
-plugin_id=org.eclipse.swtbot.feature.group, org.eclipse.swtbot.eclipse.feature.group, org.eclipse.swtbot.eclipse.test.junit.feature.group, org.eclipse.swtbot.ide.feature.group, org.eclipse.swtbot.generator.feature.feature.group, org.eclipse.swtbot.junit4_x, org.eclipse.swtbot.eclipse.gef.feature.group, org.eclipse.swtbot.eclipse.finder, org.eclipse.swtbot.forms.feature.group
+plugin_id=org.eclipse.swtbot.ide.feature.group, org.eclipse.swtbot.junit5.feature.group, org.eclipse.swtbot.generator.feature.feature.group, org.eclipse.swtbot.eclipse.feature.group
 plugin_active=false
