--- a/eclipse/plugins/checkstyle.properties
+++ b/eclipse/plugins/checkstyle.properties
@@ -1,4 +1,3 @@
-plugin_url=https://checkstyle.org/eclipse-cs/update/
+plugin_url=https://checkstyle.org/eclipse-cs-update-site
 plugin_id=net.sf.eclipsecs.feature.group
 plugin_active=true
-
