--- a/eclipse/plugins/freemarker.properties
+++ b/eclipse/plugins/freemarker.properties
@@ -1,3 +1,3 @@
-plugin_url=http://dl.bintray.com/freemarker/freemarker-ide/
+plugin_url=http://download.jboss.org/jbosstools/neon/stable/updates/
 plugin_id=org.jboss.ide.eclipse.freemarker.feature.feature.group
 plugin_active=true
