Fix cobigen project setup (#20)
* Fix cobigen project setup

* Removed build command as it's not possible to execute a script and the build is more than just asking maven to build

--- a/projects/cobigen.properties
+++ b/projects/cobigen.properties
@@ -1,7 +1,6 @@
 path=cobigen
 workingsets=cobigen
 git.url=https://github.com/devonfw/cobigen.git
-git.branch=develop
-build.command=build -DskipTests=true -Darchetype.test.skip=true clean install
+git.branch=master
 eclipse=import
 active=false
