--- a/eclipse/plugins/eclipsepde.properties
+++ b/eclipse/plugins/eclipsepde.properties
@@ -1,3 +1,3 @@
-plugin_url=http://download.eclipse.org/eclipse/updates/latest
+plugin_url=https://download.eclipse.org/eclipse/updates/latest
 plugin_id=org.eclipse.pde.source.feature.group
 plugin_active=false
