--- a/eclipse/plugins/pydev.properties
+++ b/eclipse/plugins/pydev.properties
@@ -1,3 +1,3 @@
-plugin_url=http://www.pydev.org/updates
+plugin_url=https://www.pydev.org/updates
 plugin_id=org.python.pydev.feature.feature.group, org.python.pydev.feature.source.feature.group
 plugin_active=false
