--- a/eclipse/plugins/regexutil.properties
+++ b/eclipse/plugins/regexutil.properties
@@ -1,4 +1,4 @@
 plugin_url=http://regex-util.sourceforge.net/update/
 plugin_id=com.ess.regexutil.feature.group
-plugin_active=true
+plugin_active=false
 
