--- a/devon.properties
+++ b/devon.properties
@@ -6,3 +6,4 @@
 # Uncomment the following line to get the legacy default config back for the settings
 #SETTINGS_PATH=${DEVON_IDE_HOME}/workspaces/main/development/settings
 
+GRAALVM_VERSION=21.3.0
