set DEVON_IDE_TOOLS

--- a/devon.properties
+++ b/devon.properties
@@ -6,4 +6,5 @@
 # Uncomment the following line to get the legacy default config back for the settings
 #SETTINGS_PATH=${DEVON_IDE_HOME}/workspaces/main/development/settings
 
+DEVON_IDE_TOOLS=(java mvn graalvm)
 GRAALVM_VERSION=21.3.0
